Correct spacing of about page

--- a/css/header.css
+++ b/css/header.css
@@ -81,10 +81,6 @@
   body {
     margin-top: 70px;
   }
-  
-  .content {
-    padding: 0px 10px;
-  }
 }
 
 #nav h1 {
@@ -144,17 +140,4 @@
   padding-bottom: 11px;
   display: inline-block;
   text-align: center;
-}
-
-#body {
-  display: block;
-  max-width: 1000px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-#content {
-  max-width: 800px;
-  margin-left: auto;
-  margin-right: auto;
 }
