--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,10 @@
 html, body {
   font-family: proxima-nova,Helvetica,Arial,sans-serif;
-  padding: 0px 0px 0px 0px;
-  margin: 0px 0px 0px 0px;
   background: #ccc;
-  height: 100%;
-  width: 100%;
+}
+
+.content {
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
 }
